--- a/src/Resources/app/administration/src/override/sw-settings-user/page/sw-settings-user-detail/sw-settings-user-detail.html.twig
+++ b/src/Resources/app/administration/src/override/sw-settings-user/page/sw-settings-user-detail/sw-settings-user-detail.html.twig
@@ -3,7 +3,19 @@
     <sw-card :title="$tc('rl-2fa.settings.user-detail.title')"
              :is-loading="isLoading || isLoading2Fa">
         <div v-if="user && user.customFields && user.customFields.rl_2fa_secret">
-            Two factor authentication is enabled!
+
+            <sw-alert variant="success"
+                      title="Two factor authentication is enabled"
+                      style="margin-bottom: 0;"
+                      :showIcon="true"
+                      :closable="false">
+                Congrats! You're secure!<br />
+                To disable 2FA for your account, click the button below.
+
+                <template v-slot:actions>
+                    <sw-button @click="disable2FA">Disable 2FA</sw-button>
+                </template>
+            </sw-alert>
         </div>
         <div v-else-if="!generatedSecretUrl">
             <sw-alert variant="warning"
@@ -21,7 +33,7 @@
         <div v-else-if="generatedSecretUrl">
             <sw-container columns="1fr 1fr">
                 <div>
-                    <img :src="'https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=' + generatedSecretUrl" />
+                    <img :src="generatedSecretUrl" />
                 </div>
                 <div>
                     <b>Scan the code on the left with your 2FA app.</b><br />
