--- a/src/Resources/views/storefront/page/account/profile/2fa/disable.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/2fa/disable.html.twig
@@ -1,24 +1,29 @@
+{% block page_account_profile_2fa_disable %}
+    <h3>{{ "rl-2fa.account.disable.title"|trans|sw_sanitize }}</h3>
 
-<h3>{{ "rl-2fa.account.disable.title"|trans|sw_sanitize }}</h3>
-
-<p>
-    {{ "rl-2fa.account.disable.description"|trans|sw_sanitize }}
-</p>
-
-<form method="POST"
-      action="{{ url('rl-2fa.profile.disable.post') }}">
     <p>
-        <input type="password"
-               class="form-control"
-               id="otpPassword"
-               placeholder="{{ "rl-2fa.account.disable.password"|trans|striptags }}"
-               name="otpPassword"
-               required="required">
+        {{ "rl-2fa.account.disable.description"|trans|sw_sanitize }}
     </p>
 
-    {{ sw_csrf('rl-2fa.profile.disable.post') }}
+    <form method="POST"
+          action="{{ url('rl-2fa.profile.disable.post') }}">
+        <p>
+            {% block page_account_profile_2fa_disable_input %}
+            <input type="password"
+                   class="form-control"
+                   id="otpPassword"
+                   placeholder="{{ "rl-2fa.account.disable.password"|trans|striptags }}"
+                   name="otpPassword"
+                   required="required">
+            {% endblock %}
+        </p>
 
-    <button type="submit" class="account-profile-2fa-setup-verify btn btn-primary btn-block">
-        {{ "rl-2fa.account.disable.submit"|trans|sw_sanitize }}
-    </button>
-</form>
+        {{ sw_csrf('rl-2fa.profile.disable.post') }}
+
+        {% block page_account_profile_2fa_disable_button %}
+            <button type="submit" class="account-profile-2fa-setup-verify btn btn-primary btn-block">
+                {{ "rl-2fa.account.disable.submit"|trans|sw_sanitize }}
+            </button>
+        {% endblock %}
+    </form>
+{% endblock %}
