--- a/src/Resources/views/storefront/page/account/profile/2fa/setup.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/2fa/setup.html.twig
@@ -40,7 +40,7 @@
                     {% block page_account_profile_2fa_setup_step2_input %}
                     <input type="text"
                            class="form-control"
-                           autocomplete="off"
+                           autocomplete="one-time-code"
                            id="otpVerification"
                            placeholder="{{ "rl-2fa.account.setup.verification-placeholder"|trans|striptags }}"
                            name="otpVerification"
