--- a/src/Resources/views/administration/index.html.twig
+++ b/src/Resources/views/administration/index.html.twig
@@ -91,7 +91,8 @@
             pathInfo: '{{ app.request.pathInfo }}',
             liveVersionId: '{{ liveVersionId }}',
             systemLanguageId: '{{ systemLanguageId }}',
-            apiVersion: {{ apiVersion }}
+            apiVersion: {{ apiVersion }},
+            assetPath: '{{ asset('', 'asset') }}'
         },
         appContext: {
             features: {{ features|json_encode|raw }},
