fix: add support for Shopware 6.4.1

--- a/src/Resources/views/administration/index.html.twig
+++ b/src/Resources/views/administration/index.html.twig
@@ -97,7 +97,8 @@
         appContext: {
             features: {{ features|json_encode|raw }},
             firstRunWizard: {{ firstRunWizard ? 'true' : 'false' }},
-            systemCurrencyId: '{{ systemCurrencyId }}'
+            systemCurrencyId: '{{ systemCurrencyId }}',
+            systemCurrencyISOCode: '{{ systemCurrencyISOCode }}'
         }
     });
 </script>
