fix: use correct paths for widgets to have correct storefront language

--- a/src/Resources/views/storefront/page/account/profile/2fa/disable.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/2fa/disable.html.twig
@@ -6,7 +6,7 @@
     </p>
 
     <form method="POST"
-          action="{{ url('rl-2fa.profile.disable.post') }}">
+          action="{{ url('widgets.rl-2fa.profile.disable.post') }}">
         <p>
             {% block page_account_profile_2fa_disable_input %}
             <input type="password"
@@ -18,7 +18,7 @@
             {% endblock %}
         </p>
 
-        {{ sw_csrf('rl-2fa.profile.disable.post') }}
+        {{ sw_csrf('widgets.rl-2fa.profile.disable.post') }}
 
         {% block page_account_profile_2fa_disable_button %}
             <button type="submit" class="account-profile-2fa-setup-verify btn btn-primary btn-block">
