--- a/src/Resources/views/storefront/page/account/profile/index.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/index.html.twig
@@ -23,7 +23,7 @@
                                     <button type="submit"
                                             class="account-profile-2fa-start-setup btn btn-primary"
                                             data-toggle="modal"
-                                            data-url="{{ path('rl-2fa.profile.setup') }}"
+                                            data-url="{{ path('widgets.rl-2fa.profile.setup') }}"
                                             title="{{ "rl-2fa.account.start-setup"|trans|striptags }}">
                                         {{ "rl-2fa.account.start-setup"|trans|sw_sanitize }}
                                     </button>
@@ -38,7 +38,7 @@
                                     <button type="submit"
                                             class="account-profile-2fa-start-setup btn btn-primary"
                                             data-toggle="modal"
-                                            data-url="{{ path('rl-2fa.profile.disable') }}"
+                                            data-url="{{ path('widgets.rl-2fa.profile.disable') }}"
                                             title="{{ "rl-2fa.account.disable-2fa"|trans|striptags }}">
                                         {{ "rl-2fa.account.disable-2fa"|trans|striptags }}
                                     </button>
