--- a/src/Resources/views/storefront/page/2fa/verification.html.twig
+++ b/src/Resources/views/storefront/page/2fa/verification.html.twig
@@ -40,7 +40,7 @@
                             {% endblock %}
 
                             {% block page_2fa_verification_card_body_form %}
-                                <form method="POST" action="{{ url('frontend.rl2fa.verification') }}">
+                                <form method="POST" action="{{ url('frontend.rl2fa.verification', redirect) }}">
                                     <label for="otpCode">{{ sw_csrf('frontend.rl2fa.verification') }}</label>
 
                                     {% block page_2fa_verification_card_body_form_input %}
