--- a/src/Resources/views/administration/index.html.twig
+++ b/src/Resources/views/administration/index.html.twig
@@ -21,9 +21,12 @@
 
     <script nonce="{{ cspNonce }}" type="text/javascript">
         window._features_ = {{ features|json_encode|raw }};
+
+        window.__sw__ = {
+            assetPath: '{{ asset('', 'asset') }}',
+        };
     </script>
 
-    <link rel="stylesheet" href="{{ asset('static/css/vendors-node.css', '@Administration') }}">
     <link rel="stylesheet" href="{{ asset('static/css/app.css', '@Administration') }}">
 
 </head>
@@ -33,9 +36,6 @@
 
 {% block administration_templates %}{% endblock %}
 
-<script nonce="{{ cspNonce }}" src="{{ asset('static/js/runtime.js', '@Administration') }}"></script>
-<script nonce="{{ cspNonce }}" src="{{ asset('static/js/vendors-node.js', '@Administration') }}"></script>
-<script nonce="{{ cspNonce }}" src="{{ asset('static/js/commons.js', '@Administration') }}"></script>
 <script nonce="{{ cspNonce }}" src="{{ asset('static/js/app.js', '@Administration') }}"></script>
 
 <script nonce="{{ cspNonce }}">
@@ -56,9 +56,18 @@
             .then(() => this.injectPlugin({
                 js: "/bundles/runelaenentwofactorauth/administration/js/rune-laenen-two-factor-auth.js"
             }))
-            .then(() => this.view.initDependencies())
+            .then(() => {
+                if (!this.view) {
+                    return Promise.reject();
+                }
+
+                return this.view.initDependencies();
+            })
             .then(() => this.createApplicationRoot())
             .catch((error) => this.createApplicationRootError(error));
+
+        // set force reload after successful login
+        sessionStorage.setItem('sw-login-should-reload', 'true');
     }
 
     {#
@@ -103,7 +112,8 @@
             firstRunWizard: {{ firstRunWizard ? 'true' : 'false' }},
             systemCurrencyId: '{{ systemCurrencyId }}',
             systemCurrencyISOCode: '{{ systemCurrencyISOCode }}',
-            disableExtensions: {{ disableExtensions ? 'true' : 'false' }}
+            disableExtensions: {{ disableExtensions ? 'true' : 'false' }},
+            adminEsEnable: {{ adminEsEnable ? 'true' : 'false' }}
         }
     });
 </script>
