--- a/src/Resources/views/administration/index.html.twig
+++ b/src/Resources/views/administration/index.html.twig
@@ -54,7 +54,7 @@
 
         return this.initializeLoginInitializer()
             .then(() => this.injectPlugin({
-                js: "/bundles/runelaenentwofactorauth/administration/js/rune-laenen-two-factor-auth.js"
+                js: "{{ asset('administration/js/rune-laenen-two-factor-auth.js', '@RuneLaenenTwoFactorAuth') }}"
             }))
             .then(() => {
                 if (!this.view) {
