--- a/src/Resources/views/storefront/page/account/profile/index.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/index.html.twig
@@ -22,7 +22,7 @@
                                     <p>{{ "rl-2fa.account.description"|trans|sw_sanitize }}</p>
                                     <button type="submit"
                                             class="account-profile-2fa-start-setup btn btn-primary"
-                                            data-toggle="modal"
+                                            data-bs-toggle="modal"
                                             data-url="{{ path('widgets.rl-2fa.profile.setup') }}"
                                             title="{{ "rl-2fa.account.start-setup"|trans|striptags }}">
                                         {{ "rl-2fa.account.start-setup"|trans|sw_sanitize }}
@@ -37,7 +37,7 @@
 
                                     <button type="submit"
                                             class="account-profile-2fa-start-setup btn btn-primary"
-                                            data-toggle="modal"
+                                            data-bs-toggle="modal"
                                             data-url="{{ path('widgets.rl-2fa.profile.disable') }}"
                                             title="{{ "rl-2fa.account.disable-2fa"|trans|striptags }}">
                                         {{ "rl-2fa.account.disable-2fa"|trans|striptags }}
