--- a/src/Resources/app/administration/src/override/sw-login/view/sw-login-login/sw-login-login.html.twig
+++ b/src/Resources/app/administration/src/override/sw-login/view/sw-login-login/sw-login-login.html.twig
@@ -9,8 +9,8 @@
 
             <sw-text-field
                 v-autofocus
-                v-model="otp"
-                :label="$tc('rl-2fa.sw-login.index.labelOtp')"
+                v-model:value="otp"
+                label="One-time password"
                 required>
             </sw-text-field>
 
