feat: add missing autocomplete to admin login

--- a/src/Resources/app/administration/src/override/sw-login/view/sw-login-login/sw-login-login.html.twig
+++ b/src/Resources/app/administration/src/override/sw-login/view/sw-login-login/sw-login-login.html.twig
@@ -11,7 +11,8 @@
                 v-autofocus
                 v-model:value="otp"
                 label="One-time password"
-                required>
+                required
+                autocomplete="one-time-code">
             </sw-text-field>
 
             <div class="sw-login__submit">
