--- a/src/Resources/app/administration/src/override/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
+++ b/src/Resources/app/administration/src/override/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
@@ -4,25 +4,31 @@
         <sw-skeleton />
     </template>
 
-    <router-view
-            v-else
-            v-bind="{
-                    user,
-                    timezoneOptions,
-                    languages,
-                    newPassword,
-                    newPasswordConfirm,
-                    avatarMediaItem,
-                    isUserLoading,
-                    languageId,
-                    isDisabled,
-                    userRepository,
-                }"
-            @new-password-change="onChangeNewPassword"
-            @new-password-confirm-change="onChangeNewPasswordConfirm"
-            @media-upload="setMediaItem"
-            @media-remove="onUnlinkAvatar"
-            @media-open="openMediaModal"
-            @rl-2fa-save="onSave"
-    />
+    <template v-else>
+        <router-view
+            v-slot="{ Component }"
+        >
+            <component
+                :is="Component"
+                v-bind="{
+                            user,
+                            timezoneOptions,
+                            languages,
+                            newPassword,
+                            newPasswordConfirm,
+                            avatarMediaItem,
+                            isUserLoading,
+                            languageId,
+                            isDisabled,
+                            userRepository,
+                        }"
+                @new-password-change="onChangeNewPassword"
+                @new-password-confirm-change="onChangeNewPasswordConfirm"
+                @media-upload="setMediaItem"
+                @media-remove="onUnlinkAvatar"
+                @media-open="openMediaModal"
+                @rl-2fa-save="onSave"
+            />
+        </router-view>
+    </template>
 {% endblock %}
